fix: main 화면에서 overflow 문제 수정

--- a/Front/musicnote/src/styles/Global.css
+++ b/Front/musicnote/src/styles/Global.css
@@ -88,6 +88,7 @@ body {
   width: 100vw;
   height: var(--app-height);
   background-color: #19171b;
+  overflow-y: auto;
 }
 
 #root {
